--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.ad {
+  position: absolute;
+  z-index: 99;
+  background-color: white;
+  width: 100%;
+  height: 55px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+.imageframe {
+  position: absolute;
+  z-index: 100;
+  margin-top: -18px;
+  width: 18%;
+}
